# app/endpoints/store.py
@@ -4,9 +4,10 @@ from app.middlewares.request_wrapper import request_rapper
 from app.middlewares.response_wrapper import response_rapper
 from app.models.requests.wallet_nonce_create_request import WalletNonceCreateRequest
 from app.models.requests.wallet_nonce_verify_request import StoreWalletVerifyRequest
-
+from app.core.utils.logging import TeraidPayApiLog
 
 store_router = APIRouter()
+
 
 @store_router.get("/{store_id}/wallet")
 @response_rapper()
@@ -56,4 +57,21 @@ def verify_and_create_wallet(store_id: int, request: StoreWalletVerifyRequest):
     return StoreController().verify_and_create_wallet_nonce(
         store_id=store_id,
         request=request,
+    )
+
+
+@store_router.delete("/{store_id}/wallet/{wallet_id}")
+@response_rapper()
+@request_rapper()
+def delete_wallet(store_id: int, wallet_id: int):
+    """ウォレット署名を検証し、ストアのウォレットを作成する。
+    Args:
+        wallet_id: 対象ストアの ID。
+    Returns:
+        共通レスポンス形式で整形されたウォレット作成結果。
+    """
+    TeraidPayApiLog.info(
+        f"ウォレットの削除を行います。 store_id={store_id} wallet_id={wallet_id}")
+    return StoreController().delete_wallet(
+        wallet_id=wallet_id,
     )
